--- a/pom.xml
+++ b/pom.xml
@@ -110,9 +110,11 @@
             <version>2.23.0</version>
         </dependency>
 
-
-
-
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.2</version>
+        </dependency>
     </dependencies>
 
 
